[tool.poetry]
name = "vecalign"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vecalign"}]


[tool.poetry.dependencies]
python = "^3.8"
mcerp = "^0.12"
cython = "^0.29.34"
numpy = "^1.24.2"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vecalign= "vecalign.cli:app"